# Wingspan-Solver

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: kpi-benchmarks.yml  strict-kpi.yml
backend/: config.py  main.py
backend/api/: routes_data.py  routes_game.py  routes_ml.py  routes_setup.py  routes_solver.py  schemas.py  serializers.py
backend/data/: loader.py  registries.py
backend/engine/: actions.py  rules.py  scoring.py  timed_powers.py
frontend/: package-lock.json  package.json  vite.config.ts
reports/: bird_power_audit_full.json  bird_power_semantic_tested.txt  bird_power_signed_checklist.csv  bird_power_signed_checklist.md  bird_power_signed_checklist.meta.json  current_run_scores_chart.md  explicit_mapping_audit_446.json  power_audit_446.json  power_coverage.json  power_coverage_after_tray_fix.json  power_text_conformance_flags.json  power_text_group_consistency.json  rules_conformance_2p_300.json  rules_conformance_2p_300_v2.json  rules_conformance_3p_150.json  rules_conformance_3p_150_v2.json  rules_conformance_4p_100.json  rules_conformance_4p_100_v2.json  rules_conformance_smoke.json  score_distribution_api_solver.json  score_distribution_api_solver.md  score_distribution_api_solver_compact.json  score_distribution_api_solver_compact.md  score_distribution_benchmark.json  score_distribution_benchmark.md  score_distribution_solver_simloop_compact.json  score_distribution_solver_simloop_compact.md  self_play_2p_long.json  self_play_smoke_2p.json  training_2p.json  training_3p.json  training_4p.json  training_summary.md
(+3834 files in other folders)
