[project]
name = "wingspan-solver"
version = "0.1.0"
description = "Wingspan board game solver with heuristic and Monte Carlo evaluation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated.*:DeprecationWarning:openpyxl\\.packaging\\.core",
]
